# Comment_Back

./: .gitignore  README.md  comments.json  docker-compose.yml  dockerfile  init-mongo.js  pyproject.toml  pytest.ini  requirements.txt  test.py  test_request.py
app/: dependencies.py  main.py  utils.py
app/api/endpoints/: comments.py  crawl.py  user.py
app/schemas/: comment.py  episodes.py  users.py
app/services/: crawler.py  database.py
async_test/: main.py
src/: Readme.md  crawler.py
tests/: Readme.md  test_comment_crawler.py  test_episode_crawler.py  test_kakao_crawler.py
