[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["maba <gyj0149@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
aiohttp = "^3.11.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
motor = "^3.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pyjwt = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"